tests/try-catch-finally.b
try {
  var a = 20
  raise new Error('Something happened')
} catch e {
  echo e.stacktrace
} finally {
  echo 'Cleaning up'
}